deploy/argocd/apps/rook/kustomize/httproute/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ceph-dashboard
  namespace: rook-ceph
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: default-gateway
    namespace: PLACEHOLDER_GATEWAY_NS  # Patched via Kustomize from gatewayAPI.controller.gatewayNamespace
    sectionName: https
  hostnames:
  - "ceph.PLACEHOLDER.example.com"  # Patched via Kustomize from common.domain
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: rook-ceph-mgr-dashboard
      port: 8443
      weight: 1
